--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,45 @@
+
 table {
   border: 1px solid red;
 }
 
 body {
-  background-color: ghostwhite;
+  background-color: lightseagreen;
+  margin: 0;
+  padding: 0;
 }
 
 canvas {
   border: 1px solid black;
+  padding: 0;
+  margin: auto;
+  display: block;
+  width: 1280;
 }
+
+.content {
+  position: absolute;
+  top: 200px;
+  width: 100%;
+  height: 720px;
+  background: white;
+}
+
+header {
+  z-index: 2;
+  top: 0;
+  height: 560px;
+  width: 100%;
+  position: absolute;
+  background-color: lightseagreen
+}
+
+.bottom {
+  position: absolute;
+  background: lightseagreen;
+  top:560px;
+  height: 365px;
+  width: 100%;
+}
+/*
+  transition: background-color 1s linear, color 1s cubic-bezier(0.19, 1, 0.22, 1);  */
