--- a/css/main.css
+++ b/css/main.css
@@ -15,31 +15,48 @@ canvas {
   margin: auto;
   display: block;
   width: 1280;
-}
+}/* 
 
 .content {
   position: absolute;
-  top: 200px;
+  top: 100px;
   width: 100%;
   height: 720px;
-  background: white;
+  background-color: rgba(32, 178, 170, 1);
+  transition: background-color 1s linear;  
 }
 
-header {
+.content2 { 
+  background-color: white;
+}
+
+.header {
   z-index: 2;
   top: 0;
-  height: 560px;
+  height: 460px;
   width: 100%;
   position: absolute;
-  background-color: lightseagreen
+  background-color: rgba(32, 178, 170, 1);
+  transition: height 1s linear, background-color 1s linear;  
 }
 
+.header2 {
+  height: 100px;
+  background-color: rgba(32, 178, 170, 0);
+}
 .bottom {
   position: absolute;
-  background: lightseagreen;
-  top:560px;
+  background-color: rgba(32, 178, 170, 1);
+  top:460px;
   height: 365px;
   width: 100%;
+  transition: top 1s linear, background-color 1s linear;  
 }
+
+.bottom2 {
+  top: 852px;
+  background-color: rgba(32, 178, 170, 0);
+
+} */
 /*
   transition: background-color 1s linear, color 1s cubic-bezier(0.19, 1, 0.22, 1);  */
