--- a/css/main.css
+++ b/css/main.css
@@ -15,8 +15,7 @@ canvas {
   margin: auto;
   display: block;
   width: 1280;
-}/* 
-
+}
 .content {
   position: absolute;
   top: 100px;
@@ -37,26 +36,30 @@ canvas {
   width: 100%;
   position: absolute;
   background-color: rgba(32, 178, 170, 1);
-  transition: height 1s linear, background-color 1s linear;  
+  transition: height 1s linear;  
 }
 
 .header2 {
   height: 100px;
-  background-color: rgba(32, 178, 170, 0);
 }
 .bottom {
   position: absolute;
   background-color: rgba(32, 178, 170, 1);
+  padding: 50px 100px;
   top:460px;
   height: 365px;
   width: 100%;
-  transition: top 1s linear, background-color 1s linear;  
+  transition: top 1s linear;  
 }
 
 .bottom2 {
   top: 852px;
-  background-color: rgba(32, 178, 170, 0);
 
-} */
-/*
-  transition: background-color 1s linear, color 1s cubic-bezier(0.19, 1, 0.22, 1);  */
+} 
+
+.header {
+  background-image: url('../img/logo.png');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
